# aruco_object_reconstruction

./: CMakeLists.txt  param.yaml
src/: board_pose_estimation.cpp  label_multi_view.cpp  main.cpp
src/include/: MyPointRepresentation.h  board_pose_estimation.h  board_pose_estimation.hpp  label_multi_view.h
